[tool.poetry]
name = "eagerx_ode"
version = "0.1.25"
license = "Apache2.0"
description = "Engine (with corresponding nodes) that uses arbitrary ODEs to simulate objects in EAGERx."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_ode"
repository = "https://github.com/eager-dev/eagerx_ode"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.6.2"
eagerx = "^0.1.25"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
flake8= ">=3"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_ode/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"